--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -35,4 +35,11 @@ discourse-simplification {
 	attribution_verbs = ${attribution_verbs}
 	cue_phrases = ${cue_phrases}
 	with-sentence-simplification = true
+	translator.geofluent {
+	    key = ""
+	    secret = ""
+	    active = false
+	    # supported languages: "de-de", "es-xn", "fi-fi", "fr-xn", "it-it", "nl-be"
+	    language = "de-de"
+	}
 }
