--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,38 +1,9 @@
-include "attribution_verbs"
-include "cue_phrases"
-
 discourse-simplification {
 	rules = [
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.ReferenceInitialConjunctionExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.ReferenceInitialAdverbialExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.ReferenceMedialAdverbialExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.ReferenceFinalAdverbialExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.CoordinationExtractor,
-
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.PurposePreExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SubordinationPrePurposeExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SharedNPPreParticipalExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SubordinationPreExtractor,
-
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SharedNPPostCoordinationExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SharedNPPostParticipalExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SubordinationPostPurposeExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.PurposePostExtractor,
-        //org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SubordinationPostExtractor2,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.QuotedAttributionPostExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SubordinationPostAttributionExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.SubordinationPostExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.QuotedAttributionPreExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.PreAttributionExtractor
-
-        // should be applied last (because they dont allow further splitting)
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.ListNP.PreListNPExtractor,
-        org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.ListNP.PostListNPExtractor
+	    org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.MyRule
+	    org.lambda3.text.simplification.discourse.runner.discourse_tree.extraction.rules.MyRule2
 	]
 	ignored-relations = [
 	    UNKNOWN_COORDINATION,
 	]
-	attribution_verbs = ${attribution_verbs}
-	cue_phrases = ${cue_phrases}
-	with-sentence-simplification = true
 }
